# partial-cfold

./: CMakeLists.txt  PartialCFold.cpp  PartialCFold.h  README.md
test/: main.ll  out.ll  test1.sh
